--- a/taipei-day-trip/static/css/thankyou.scss
+++ b/taipei-day-trip/static/css/thankyou.scss
@@ -18,6 +18,22 @@
     }
 }
 
+input[type="number"]{
+    width: 200px;
+    border: solid $gray757 1px;
+    border-radius: 3px;
+    padding: 5px 10px;
+    margin: 20px 5px 0 25px;
+}
+
+.order-btn {
+    background-color: $gray757;
+    padding: 5px 10px;
+    border-radius: 5px;
+    color: $white;
+}
+
+
 .main {
     min-height: unset;
 }
